NM-0 fix date wrap

--- a/src/css/module/contributors.scss
+++ b/src/css/module/contributors.scss
@@ -2,6 +2,7 @@
   margin-top: -20px;
   margin-bottom: 20px;
   font-size: 13px;
+  white-space: nowrap;
 
   img {
     border-bottom-left-radius: 25px;
